# search-algorithms

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  search-algorithms.cabal  stack.yaml
bench/: bench.hs
src/Algorithm/: Search.hs
test/: doctests.hs
test/Algorithm/: SearchSpec.hs
