name:                search-algorithms
version:             0.3.1
synopsis:            Common graph search algorithms
description:         Library containing common graph search algorithms,
                     including depth-first and breadth-first searches,
                     Dijkstra's algorithm, and A*
homepage:            https://github.com/devonhollowood/search-algorithms#readme
license:             BSD3
license-file:        LICENSE
author:              Devon Hollowood
maintainer:          devonhollowood@gmail.com
copyright:           2017 Devon Hollowood
category:            Algorithm
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Algorithm.Search
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5 && < 0.7
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite search-algorithms-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Algorithm.SearchSpec
  build-depends:       base
                     , search-algorithms
                     , containers >= 0.5
                     , hspec >= 2.2
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite doc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             doctests.hs
  build-depends:       base
                     , search-algorithms
                     , containers >= 0.5
                     , doctest >= 0.8
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/devonhollowood/search-algorithms
